--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -18,6 +18,13 @@ jobs:
       with:
         submodules: true
         
+    - name: Setup SSH key for private submodules
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+        
     - name: Run Slither
       uses: crytic/slither-action@v0.4.0
       id: slither
