--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: true
+        ssh-key: ${{secrets.SSH_PRIVATE_KEY}}
         
     - name: Setup SSH key for private submodules
       run: |
