--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -19,6 +19,10 @@ jobs:
         submodules: true
         ssh-key: ${{secrets.SSH_PRIVATE_KEY}}
                 
+    - name: Update Submodules
+      run: |
+        git submodule update --remote
+
     - name: Run Slither
       uses: crytic/slither-action@v0.4.0
       id: slither
@@ -27,6 +31,7 @@ jobs:
         solc-version: 0.8.26
         sarif: results.sarif
         fail-on: none
+        slither-args: "--exclude-dependencies --exclude arbitrary-send-eth,dead-code,missing-inheritance,timestamp,calls-loop,arbitrary-send-erc20,reentrancy-no-eth,redundant-statements,solc-version,reentrancy-unlimited-gas"
 
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v3
