--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -31,7 +31,7 @@ jobs:
         solc-version: 0.8.26
         sarif: results.sarif
         fail-on: none
-        slither-args: "--exclude-dependencies --exclude arbitrary-send-eth,dead-code,missing-inheritance,timestamp,calls-loop,arbitrary-send-erc20,reentrancy-no-eth,redundant-statements,solc-version,reentrancy-unlimited-gas"
+        slither-args: "--exclude-dependencies --exclude arbitrary-send-eth,dead-code,missing-inheritance,timestamp,calls-loop,arbitrary-send-erc20,reentrancy-no-eth,redundant-statements,solc-version,reentrancy-unlimited-gas,incorrect-equality"
 
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v3
